gccida/g1/open_dump_file
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/open_dump_file/src/toplev.c:2265:22: error: must use 'enum' tag to refer to type 'dump_file_index'
int  open_dump_file( dump_file_index index, tree decl) 
                     ^
                     enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/open_dump_file/src/toplev.c:2275:15: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_push( TV_DUMP_0); 
              ^~~~~~~~~
              TV_DUMP
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/open_dump_file/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/open_dump_file/src/toplev.c:2301:14: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_pop( TV_DUMP_0); 
             ^~~~~~~~~
             TV_DUMP
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/open_dump_file/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/open_dump_file/src/obj/toplev.o] Error 1
